# PyTransformer

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  SUPPORT.md  mp4chunk.py  mp4dir2txt.py  mp4file2txt.py  pdfdir2txt.py  pdffile2txt.py  pyproject.toml  tox.ini  txtconcat.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  pages.yml
docs/: architecture.md  commands.md  lessons-learned.md  privacy.md
docs/html/: architecture.html  changelog.html  code-of-conduct.html  commands.html  contributing.html  index.html  lessons-learned.html  privacy.html  security.html  styles.css  support.html
docs/html/commands/: pyt-files-append-folder-name.html  pyt-help.html  pyt-image-collage-slice.html  pyt-image-split.html  pyt-image-to-webp.html  pyt-image-variants-count.html  pyt-jpeg-count-variants.html  pyt-jpeg-show-metadata.html  pyt-jpeg-sliced-collage.html  pyt-jpeg-strip-metadata.html  pyt-m4a-to-mp3.html  pyt-mp4-split-chunks.html  pyt-mp4-transcribe-batch.html  pyt-mp4-transcribe.html  pyt-pdf-extract-selectable-text-batch.html  pyt-pdf-extract-selectable-text.html  pyt-pdf-extract-text.html  pyt-pdf-render-jpeg.html  pyt-text-concatenate.html
scripts/: build_docs.py  check_docs_links.py
src/pytransformer/: __init__.py
src/pytransformer/cli/: __init__.py  pyt_files_append_folder_name.py  pyt_help.py  pyt_image_collage_slice.py  pyt_image_split.py  pyt_image_to_webp.py  pyt_image_variants_count.py  pyt_jpeg_count_variants.py  pyt_jpeg_show_metadata.py  pyt_jpeg_sliced_collage.py  pyt_jpeg_strip_metadata.py  pyt_m4a_to_mp3.py  pyt_mp4_split_chunks.py  pyt_mp4_transcribe.py  pyt_mp4_transcribe_batch.py  pyt_pdf_extract_selectable_text.py  pyt_pdf_extract_selectable_text_batch.py  pyt_pdf_extract_text.py  pyt_pdf_render_jpeg.py  pyt_text_concatenate.py
src/pytransformer/core/: __init__.py  audio.py  common.py  jpeg_metadata.py
tests/: test_coverage_expansion.py  test_image_collage_slice.py  test_image_split.py  test_image_to_webp.py  test_jpeg_sliced_collage.py  test_m4a_to_mp3.py  test_project_quality.py
